Use buildGWT task from cuba-plugin